--- a/style.css
+++ b/style.css
@@ -132,10 +132,7 @@
   }
 }
 
-html {
-  scroll-behavior: smooth;
-  cursor: cell;
-}
+
 
 body {
   margin: 0;
@@ -170,17 +167,17 @@ nav {
 }
 
 @keyframes zoomin {
-  from {margin-left: 70%;}
-  to {margin-left: 0;}
+  from {margin-left: 70%; opacity: 0;}
+  to {margin-left: 0; opacity: 1;}
 }
 
-h1 {
+#name {
   font-size: 60px;
   color: var(--text-strong-color);
   text-shadow: 7px 7px var(--shadow-color);
   margin-left: 0;
   animation-name: zoomin;
-  animation-duration: 4s;
+  animation-duration: 2s;
   animation-timing-function: ease;
 }
 
@@ -210,7 +207,13 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
-header p {
+@keyframes boomin {
+  from {margin-left: 0; opacity: 0;}
+  to {margin-left: 300px; opacity: 1}
+}
+
+#job {
+  display: none;
   color: var(--special-text-color);
   font-size: 18px;
   text-shadow: 4px gray;
@@ -240,14 +243,15 @@ header p {
 }
 
 .about-stuff {
-  margin-top: 80px;
+  align-self: center;
 }
 
 .about-stuff h2 {
   color: var(--special-color);
   text-shadow: 3px 3px var(--special-shadow-color);
   text-align: right;
-  margin-right: 200px;
+  margin-right: 100px;
+  margin-bottom: 40px;
 }
 
 .about-stuff p {
@@ -413,6 +417,12 @@ header p {
   text-align: center;
 }
 
+@keyframes appear {
+  0% {transform: scale(0.97)}
+  55% {transform: scale(1.03)}
+  100% {transform: scale(1)}
+}
+
 #info-text {
   min-width: 300px;
   width: 400px;
@@ -465,4 +475,9 @@ button:hover {
   background-color: var(--special-mark-color);
 }
 
-
+html {
+  scroll-behavior: smooth;
+  cursor: cell;
+  visibility: visible;
+  opacity: 1;
+}
