--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --bg-color: rgba(51,43,63, 1);
-    --text-color: rgba(204,174,246, 1);
+    --text-color: #F3ECFD;
     --text-soft-color: rgba(190,150,243, 1);
-    --text-strong-color: rgba(204,174,246, 1);
+    --text-strong-color: #F3ECFD;
     --subtle-color: rgba(47,39,58, 0.9);
     --border-color: rgba(99,83,123, 1);
     --shadow-color: rgba(0,0,0, 1);
@@ -104,7 +104,7 @@
     --bg-color: rgba(51,43,63, 1);
     --text-color: rgba(217,197,248, 1);
     --text-soft-color: rgba(217,197,248, 1);
-    --text-strong-color: rgba(204,174,246, 1);
+    --text-strong-color: #F3ECFD;
     --subtle-color: rgba(47,39,58, 0.9);
     --border-color: rgba(163,137,200, 1);
     --shadow-color: rgba(0,0,0, 1);
@@ -137,6 +137,7 @@
 body {
   margin: 0;
   font-family: 'Rubik Mono One', sans-serif;
+  background:purple;
 }
 
 body::before {
@@ -257,7 +258,7 @@ p {
 .about-stuff p {
   font-size: 20px;
   line-height: 1.5;
-  text-align: justify;
+  text-align: left;
   width: 600px;
   margin-right: 100px;
   color: var(--special-text-color);
@@ -429,7 +430,7 @@ input {
   display: none;
 }
 
-label {
+button {
   margin-right: 30px;
   cursor: pointer;
   color: var(--special-text-color);
@@ -473,7 +474,7 @@ label {
   margin: 20px;
   font-size: 16px;
   line-height: 1.5;
-  text-align: justify;
+  text-align: left;
 }
 
 hr {
@@ -506,4 +507,10 @@ html {
   cursor: cell;
   visibility: visible;
   opacity: 1;
+}
+
+a {
+  color: white;
+  font-size: 10px;
+  text-decoration: none;
 }
