--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ header {
   .grid {
     width: auto;
     grid-template-columns: 400px;
-    grid-template-rows: repeat(auto-fit, 400px);
+    grid-template-rows: repeat(auto-fill, 400px);
     overflow: visible;
     height: auto;
   }
