--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ header {
   .grid {
     width: auto;
     grid-template-columns: 400px;
-    grid-template-rows: repeat(auto-fill, 400px);
+    grid-template-rows: repeat(auto-fit, 400px);
     overflow: visible;
     height: auto;
   }
@@ -339,39 +339,36 @@ header {
   opacity: 95%;
 }
 
-@media (pointer: coarse) {
-  .grid .overlay {
-    height: 250px;
-    width: 400px;
-    background: var(--pewter-blue);
-    top: 20%;
-    opacity: 90%;
-    border-radius: 0;
-  }
-}
-
 .overlay .text-container {
   color: black;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
+@media (pointer: coarse) {
+  .grid .overlay {
+    height: 50%;
+    width: 100%;
+    background: var(--pewter-blue);
+    top: 20%;
+    opacity: 90%;
+    border-radius: 0;
+    overflow: hidden;
+  }
+  .text-container a, .text-container h3 {
+    margin: 5px;
+  }
+
+}
 .overlay .link-container {
   display: flex;
   width: 100%;
   flex-direction: row;
   justify-content: space-around;
-  margin-bottom: 10px;
-}
-
-.link-container a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .right-container {
