--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   --medium-spring-green: #32de8aff;
   --terra-cotta: #ed6a5aff;
 
+  --pewter-blue-faded: rgba(119, 156, 171, 0.521);
   --english-violet-faded: rgba(107, 78, 113, 0.568);
   --medium-spring-green-faded: rgba(50, 222, 139, 0.568);
 }
@@ -25,6 +26,7 @@ body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background: var(--pewter-blue);
+  background-image: linear-gradient(132deg, rgba(119, 156, 171, 0.85), rgba(119, 157, 171, 0.85)), url('https://images.unsplash.com/photo-1416244579084-cceb7ab682ca?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1955&q=80');
 }
 
 h2 {
@@ -40,6 +42,10 @@ h3 {
 P {
   font-size: 20px;
   line-height: 1.5;
+}
+
+ul {
+  list-style: none;
 }
 
 a, button {
@@ -59,29 +65,116 @@ a:hover, button:hover {
 }
 
 
-/* NAVIGATION BAR START */
-
-nav {
-  background-color: var(--english-violet-faded);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  display: flex;
-  justify-content: right;
-  z-index: 1;
-}
-
-@media (max-width: 640px) {
-  nav {
-    justify-content: center;
-  }
-}
-
-/* NAVIGATION BAR END */
-
 /* HEADER START */
 
 header {
+  background-color: var(--pewter-blue-faded);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 3;
+}
+
+header img {
+  min-width: 90px;
+  width: 90px;
+  height: 90px;
+  display: block;
+  border-radius: 50%;
+  margin: 10px;
+}
+
+.menu-buttons {
+  display: flex;
+}
+
+.mobile-menu-buttons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+li {
+  margin: 30px;
+}
+
+@media (max-width: 640px) {
+  #navbar {
+    display: none;
+  }
+}
+
+@media (min-width: 640px) {
+  .nav-toggle {
+    display: none;
+  }
+
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.nav-toggle {
+  cursor: pointer;
+  padding: 5px;
+  margin-right: 50px;
+  background: var(--english-violet-faded);
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999999999;
+}
+
+.nav-toggle span {
+  height: 2px;
+  width: 30px;
+  display: block;
+  margin: 8px 10px;
+  background: white;
+  border-radius: 5px;
+}
+
+.nav-toggle.show span.one {
+  transform: rotate(45deg);
+  margin-top: 10px;
+}
+
+.nav-toggle.show  span.two {
+  transform: rotate(-45deg);
+  margin-top: -10px;
+}
+
+.mobile-menu {
+  display: flex;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  background: var(--terra-cotta);
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
+  opacity: 1;
+}
+
+
+/* HEADER END */
+
+/*  START main section*/
+
+#main {
   margin-top: 200px;
   height: 80vh;
 }
@@ -133,7 +226,7 @@ header {
 }
 
 @media (max-width: 640px) {
-  header {
+  #main {
     display: flex;
     flex-direction: column;
   }
@@ -145,14 +238,21 @@ header {
   }
 }
 
+@media (max-width: 390px) {
+  #name {
+    font-size: 50px;
+  }
+}
+
 /* ABOUT SECTION START */
 
 #about {
   height: 100vh;
   width: 95%;
-  background-color: var(--medium-spring-green);
+  background-color: var(--english-violet);
   display: flex;
   justify-content: space-around;
+  margin-bottom: 100px;
 }
 
 #about img {
