--- a/style.css
+++ b/style.css
@@ -344,8 +344,7 @@ header img {
   width: 960px;
   height: 60vh;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 300px);
-  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-columns: repeat(3, 300px);
   grid-gap: 20px;
   overflow-y: scroll;
 }
@@ -353,6 +352,7 @@ header img {
 @media (max-width: 1650px) {
   .grid {
     width: 640px;
+    grid-template-columns: repeat(2, 300px);
   }
 }
 
@@ -420,7 +420,6 @@ header img {
   border-radius: 4rem;
   width: 100%;
   height: 100%;
-  margin-bottom: 50px;
   opacity: 1;
   transition: opacity 0.3s;
   transition-timing-function: ease-out;
